--- a/Grid/index.html
+++ b/Grid/index.html
@@ -11,9 +11,11 @@
             justify-content: center;
             align-items: center;
 
-            height: 100vh;
+            height: 95vh;
 
             background: linear-gradient(45deg, rgb(75, 75, 75), rgb(150, 150, 150));
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         a {
